Fixed Colab link

--- a/ObjectOrientedProgramming.ipynb
+++ b/ObjectOrientedProgramming.ipynb
@@ -5,10 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!--href=\"https://colab.research.google.com/github/pagssud/.\"-->\n",
-    "Currently does nothing\n",
-    "\n",
-    "<a href=\"#\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/pagssud/intermediate-programming-workshop/blob/main/ObjectOrientedProgramming.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
